CMS maestro terminado

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "la-goleta-studio",
+  "name": "pixelens-plantilla-cms",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
